Fix bug in JITWeightedLowHash

--- a/notebooks/jaccard/jaccard.py.ipynb
+++ b/notebooks/jaccard/jaccard.py.ipynb
@@ -578,7 +578,9 @@
       "Elapsed time: 11.41 s\n",
       "1\t11\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (TF-IDF)', binarize=False, tfidf=True, dim_reduction=None, _elapsed_time=11.414396524429321)\n",
       "Elapsed time: 12.21 s\n",
-      "0\t12\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF)', binarize=True, tfidf=True, dim_reduction=None, _elapsed_time=12.214722633361816)\n"
+      "0\t12\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Euclidean (IDF)', binarize=True, tfidf=True, dim_reduction=None, _elapsed_time=12.214722633361816)\n",
+      "Elapsed time: 22854.54 s\n",
+      "2\t22854\tNearestNeighborsConfig(method=<class 'nearest_neighbors.ExactNearestNeighbors'>, description='Exact Jaccard (binary)', binarize=True, tfidf=False, dim_reduction=None, _elapsed_time=22854.53984975815)\n"
      ]
     }
    ],
