Add scBiMap dimension reduction

--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -37,6 +37,7 @@
    "outputs": [],
    "source": [
     "from data_io import is_fwd_id, get_fwd_id, get_sibling_id\n",
+    "from dim_reduction import SpectralEmbedding, scBiMapEmbedding\n",
     "from nearest_neighbors import (\n",
     "    ExactNearestNeighbors,\n",
     "    NNDescent,\n",
@@ -226,36 +227,57 @@
     "    \n",
     "    # Minimap2 all-vs-all\n",
     "    NearestNeighborsConfig(\n",
-    "        method=PAFNearestNeighbors,\n",
+    "        nearest_neighbors_method=PAFNearestNeighbors,\n",
     "        description=\"Minimap2 all-vs-all\",\n",
-    "        nearest_neighbor_kw=dict(paf_path=paf_path, read_indices=read_indices),\n",
+    "        nearest_neighbors_kw=dict(paf_path=paf_path, read_indices=read_indices),\n",
     "        **kw\n",
     "    ),\n",
     "    \n",
     "    # DimReduction + HNSW \n",
     "    NearestNeighborsConfig(\n",
-    "        method=HNSW,\n",
-    "        description=\"HNSW (IDF, 100 dim.)\",\n",
+    "        nearest_neighbors_method=HNSW,\n",
+    "        description=\"HNSW (IDF, Spectral 100 dim.)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=100,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=HNSW,\n",
-    "        description=\"HNSW (TF-IDF, 100 dim.)\",\n",
+    "        nearest_neighbors_method=HNSW,\n",
+    "        description=\"HNSW (IDF, scBiMap 100 dim.)\",\n",
+    "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=100,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=scBiMapEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=HNSW,\n",
+    "        description=\"HNSW (TF-IDF, Spectral 100 dim.)\",\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=HNSW,\n",
+    "        description=\"HNSW (TF-IDF, scBiMap 100 dim.)\",\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=scBiMapEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    # LowHash\n",
     "    NearestNeighborsConfig(\n",
-    "        method=LowHash,\n",
+    "        nearest_neighbors_method=LowHash,\n",
     "        description=\"LowHash (binary)\",\n",
     "        tfidf=False,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -264,10 +286,10 @@
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=LowHash,\n",
+    "        nearest_neighbors_method=LowHash,\n",
     "        description=\"MinHash (binary)\",\n",
     "        tfidf=False,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_count=20,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -278,10 +300,10 @@
     "    \n",
     "    # Weighted LowHash\n",
     "    NearestNeighborsConfig(\n",
-    "        method=WeightedLowHash,\n",
+    "        nearest_neighbors_method=WeightedLowHash,\n",
     "        description=\"Weighted LowHash (TF)\",\n",
     "        tfidf=False,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -290,11 +312,11 @@
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=WeightedLowHash,\n",
+    "        nearest_neighbors_method=WeightedLowHash,\n",
     "        description=\"Weighted LowHash (IDF)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -303,10 +325,10 @@
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=WeightedLowHash,\n",
+    "        nearest_neighbors_method=WeightedLowHash,\n",
     "        description=\"Weighted LowHash (TF-IDF)\",\n",
     "        tfidf=True,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_fraction=0.01,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -316,10 +338,10 @@
     "    ),\n",
     "    \n",
     "    NearestNeighborsConfig(\n",
-    "        method=WeightedLowHash,\n",
+    "        nearest_neighbors_method=WeightedLowHash,\n",
     "        description=\"Weighted MinHash (TF)\",\n",
     "        tfidf=False,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_count=20,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -328,11 +350,11 @@
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=WeightedLowHash,\n",
+    "        nearest_neighbors_method=WeightedLowHash,\n",
     "        description=\"Weighted MinHash (IDF)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_count=20,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -341,10 +363,10 @@
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=WeightedLowHash,\n",
+    "        nearest_neighbors_method=WeightedLowHash,\n",
     "        description=\"Weighted MinHash (TF-IDF)\",\n",
     "        tfidf=True,\n",
-    "        nearest_neighbor_kw=dict(\n",
+    "        nearest_neighbors_kw=dict(\n",
     "            lowhash_count=20,\n",
     "            max_bucket_size=max_bucket_size,\n",
     "            repeats=100,\n",
@@ -358,95 +380,137 @@
     "small_data_configs = [\n",
     "    # PQ\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ProductQuantization,\n",
+    "        nearest_neighbors_method=ProductQuantization,\n",
     "        description=\"PQ (IDF, 100 dim.)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=100,\n",
-    "        nearest_neighbor_kw=dict(nbits=6),\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(nbits=6),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ProductQuantization,\n",
+    "        nearest_neighbors_method=ProductQuantization,\n",
     "        description=\"PQ (TF-IDF, 100 dim.)\",\n",
     "        binarize=False,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=100,\n",
-    "        nearest_neighbor_kw=dict(nbits=6),\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(nbits=6),\n",
     "        **kw\n",
     "    ),\n",
     "    # NNdescent\n",
     "    NearestNeighborsConfig(\n",
-    "        method=NNDescent,\n",
+    "        nearest_neighbors_method=NNDescent,\n",
     "        description=\"NNdescent (IDF)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
+    "        dimension_reduction_method=None,\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=NNDescent,\n",
+    "        nearest_neighbors_method=NNDescent,\n",
     "        description=\"NNdescent (TF-IDF)\",\n",
     "        tfidf=True,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
+    "        dimension_reduction_method=None,\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
     "        **kw\n",
     "    ),\n",
     "    \n",
-    "    # Euclidean (exact)\n",
+    "    Euclidean (exact)\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ExactNearestNeighbors,\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
     "        description=\"Exact Euclidean (binary)\",\n",
     "        binarize=True,\n",
     "        tfidf=False,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=None,\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ExactNearestNeighbors,\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
     "        description=\"Exact Euclidean (TF)\",\n",
     "        tfidf=False,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=None,\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ExactNearestNeighbors,\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
     "        description=\"Exact Euclidean (IDF)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=None,\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ExactNearestNeighbors,\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
     "        description=\"Exact Euclidean (TF-IDF)\",\n",
     "        tfidf=True,\n",
-    "        dim_reduction=None,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=None,\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (IDF, 100 dim.)\",\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (IDF, Spectral 100 dim.)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=100,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=ExactNearestNeighbors,\n",
-    "        description=\"Exact Euclidean (TF-IDF, 100 dim.)\",\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (IDF, Spectral 500 dim.)\",\n",
+    "        binarize=True,\n",
     "        tfidf=True,\n",
-    "        dim_reduction=100,\n",
-    "        nearest_neighbor_kw=dict(metric=\"euclidean\"),\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
-    "    \n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (TF-IDF, Spectral 100 dim.)\",\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (IDF, scBiMap 100 dim.)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=scBiMapEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (IDF, scBiMap 500 dim.)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=scBiMapEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=ExactNearestNeighbors,\n",
+    "        description=\"Exact Euclidean (TF-IDF, scBiMap 100 dim.)\",\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=scBiMapEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
     "]\n",
     "\n",
     "if feature_matrix.shape[0] <= 20_000:\n",
@@ -647,7 +711,7 @@
     "                    graph=query_graphs[i],\n",
     "                    figsize=figsize,\n",
     "                    seed=seed,\n",
-    "                    method=layout_method,\n",
+    "                    layout_method=layout_method,\n",
     "                )\n",
     "            return i, pos\n",
     "\n",
