--- a/notebooks/jit/jit.py.ipynb
+++ b/notebooks/jit/jit.py.ipynb
@@ -513,7 +513,7 @@
     "        **kw\n",
     "    ),\n",
     "    NearestNeighborsConfig(\n",
-    "        method=JITWeightedLowHash,\n",
+    "        method=a,\n",
     "        description=\"Weighted LowHash (TF)\",\n",
     "        tfidf=False,\n",
     "        nearest_neighbor_kw=dict(\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6ae6103e-4222-4bfd-ab3a-9c23f3d25331",
    "metadata": {},
    "outputs": [
@@ -558,8 +558,37 @@
      "output_type": "stream",
      "text": [
       "Evaluating 2 configs using 1 processes.\n",
-      "0 0 1000 "
+      "0 0 1000 2000 3000 4000 5000 \n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.WeightedLowHash'>, description='Weighted LowHash (TF)', binarize=False, tfidf=False, dim_reduction=None). Elapsed time: 111.83 s\n",
+      "1 0 1000 2000 3000 4000 5000 \n",
+      "Finished NearestNeighborsConfig(method=<class 'nearest_neighbors.JITWeightedLowHash'>, description='Weighted LowHash (TF)', binarize=False, tfidf=False, dim_reduction=None). Elapsed time: 112.18 s\n",
+      "\n",
+      "CPU times: user 391 ms, sys: 52.2 ms, total: 443 ms\n",
+      "Wall time: 3min 44s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: array([[ 875,  547, 1391, ..., 3032,  600, 2408],\n",
+       "        [ 874, 2225,  546, ..., 2234,  601, 2409],\n",
+       "        [3305,  450,  846, ...,  773,   94,  677],\n",
+       "        ...,\n",
+       "        [4556, 2740, 4060, ..., 4036, 4427, 4684],\n",
+       "        [4291, 2483,  703, ..., 3815, 5060, 2563],\n",
+       "        [4290, 3186, 1234, ...,  845, 3814, 2562]]),\n",
+       " 1: array([[ 875,  547, 1391, ..., 3032,  600, 2408],\n",
+       "        [ 874, 2225,  546, ..., 2234,  601, 2409],\n",
+       "        [3305,  450,  846, ...,  773,   94,  677],\n",
+       "        ...,\n",
+       "        [4556, 2740, 4060, ..., 4036, 4427, 4684],\n",
+       "        [4291, 2483,  703, ..., 3815, 5060, 2563],\n",
+       "        [4290, 3186, 1234, ...,  845, 3814, 2562]])}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -574,252 +603,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "1e7b6034-bc52-4938-bad6-685c845b8921",
+   "execution_count": 20,
+   "id": "60587608-84cb-4370-8fdb-f2192345c959",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0, 3, 3],\n",
-       "       [2, 1, 2]])"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'scipy.sparse._csc.csc_matrix'>\n"
+     ]
     }
    ],
    "source": [
-    "k_smallest_indices_axis(a, 2, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "d4f6ff2d-c6b1-4607-8b13-7263336ac7c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [3, 0, 1],\n",
-       "       [3, 3, 1]])"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "a8bb941d-1923-4567-922a-2d4afd47b655",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 1],\n",
-       "       [1, 0, 2],\n",
-       "       [2, 2, 0]])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "custom_argsort(a, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "ab5dda95-0d6f-44b9-95bd-2b09bce7fb42",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 1],\n",
-       "       [1, 0, 2],\n",
-       "       [2, 2, 0]])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argpartition(a, 1, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "d0fe2c7b-9273-4035-867e-722cf815f7a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy import sparse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "6e209e08-087b-4a84-ba32-bc707f6b4917",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = np.array([[1, 2, 3], [4, 5, 6], [7,8,9]])\n",
-    "data = sparse.csr_matrix(data)\n",
-    "j = 0\n",
+    "import scipy.sparse\n",
     "\n",
+    "# Create a sparse CSR matrix\n",
+    "x = scipy.sparse.csr_matrix([[1, 0, 0], [0, 2, 0], [0, 0, 3]])\n",
     "\n",
+    "# Transpose the matrix\n",
+    "x_transposed = x.T\n",
     "\n",
-    "dimension_count = data.shape[0]\n",
-    "feature_indices = [0, 1, 2]\n",
-    "feature_count = 10\n",
-    "\n",
-    "weights = data[feature_indices, j].todense()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "rng = np.random.default_rng(33)\n",
-    "u1 = rng.uniform(0, 1, (feature_count, dimension_count))\n",
-    "u2 = rng.uniform(0, 1, (feature_count, dimension_count))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "9d48dabd-05b1-45a8-b6d3-25c9cdb4939b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[1],\n",
-       "        [4],\n",
-       "        [7]])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "55c4def4-2660-44d3-b6e1-bac281234cac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gamma=  -np.log(np.multiply(u1[feature_indices, :], u2[feature_indices, :]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "4adbfd80-c5eb-4856-af64-43cc3a52945d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.99996095, 0.77749508, 1.41946212],\n",
-       "       [2.58757656, 1.15016226, 1.36398563],\n",
-       "       [0.62642535, 0.78200423, 1.8670715 ]])"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gamma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "870e3fb0-c7c5-4b2b-93ef-3e74dbdc1e7b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[0.        , 0.        , 0.        ],\n",
-       "        [1.38629436, 1.38629436, 1.38629436],\n",
-       "        [1.94591015, 1.94591015, 1.94591015]])"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.repeat(np.log(weights), dimension_count).reshape(-1, dimension_count) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "84a14324-e704-486a-9b49-c5271035b095",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from numpy import matlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "3986844b-deb0-42a6-bbf9-4f15dc972978",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[0.        , 0.        , 0.        ],\n",
-       "        [1.38629436, 1.38629436, 1.38629436],\n",
-       "        [1.94591015, 1.94591015, 1.94591015]])"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matlib.repmat(\n",
-    "    np.log(weights),\n",
-    "    1,\n",
-    "    dimension_count,\n",
-    ")"
+    "# Check the type\n",
+    "print(type(x_transposed))  # Output: <class 'scipy.sparse.csr.csr_matrix'>\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2ea9f46-06d1-4703-ab4a-f07f36f115b4",
+   "id": "bd6153cb-5a95-4062-a767-3c8effad8e61",
    "metadata": {},
    "outputs": [],
    "source": []
