Simplify scBiMap implementation

--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -246,11 +246,31 @@
     "    ),\n",
     "    NearestNeighborsConfig(\n",
     "        nearest_neighbors_method=HNSW,\n",
+    "        description=\"HNSW (IDF, Spectral 500 dim.)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=SpectralEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=HNSW,\n",
     "        description=\"HNSW (IDF, scBiMap 100 dim.)\",\n",
     "        binarize=True,\n",
     "        tfidf=True,\n",
     "        dimension_reduction_method=scBiMapEmbedding,\n",
     "        dimension_reduction_kw=dict(n_dimensions=100),\n",
+    "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
+    "        **kw\n",
+    "    ),\n",
+    "    NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=HNSW,\n",
+    "        description=\"HNSW (IDF, scBiMap 500 dim.)\",\n",
+    "        binarize=True,\n",
+    "        tfidf=True,\n",
+    "        dimension_reduction_method=scBiMapEmbedding,\n",
+    "        dimension_reduction_kw=dict(n_dimensions=500),\n",
     "        nearest_neighbors_kw=dict(metric=\"euclidean\"),\n",
     "        **kw\n",
     "    ),\n",
@@ -417,8 +437,7 @@
     "        nearest_neighbors_kw=dict(metric=\"euclidean\", n_jobs=None),\n",
     "        **kw\n",
     "    ),\n",
-    "    \n",
-    "    Euclidean (exact)\n",
+    "    # Exact Euclidean\n",
     "    NearestNeighborsConfig(\n",
     "        nearest_neighbors_method=ExactNearestNeighbors,\n",
     "        description=\"Exact Euclidean (binary)\",\n",
@@ -536,11 +555,12 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "#configs = configs[:1]\n",
     "\n",
     "max_n_neighbors = COVERAGE_DEPTH\n",
-    "processes = threads if feature_matrix.shape[0] <= 20_000 else 1\n",
+    "processes = threads\n",
     "\n",
-    "nbr_dict = mp_compute_nearest_neighbors(\n",
+    "nbr_dict, time_dict, memory_dict = mp_compute_nearest_neighbors(\n",
     "    data=feature_matrix,\n",
     "    configs=configs,\n",
     "    n_neighbors=max_n_neighbors,\n",
@@ -591,8 +611,12 @@
     "    print(i, end=' ')\n",
     "    for k in k_values:\n",
     "        graph = graphs[i][k]\n",
-    "        stats = get_overlap_statistics(query_graph=graph, reference_graph=reference_graph)\n",
-    "        stats = {\"config_id\": i, \"description\": config.description, \"n_neighbors\": k, **stats}\n",
+    "        graph_stats = get_overlap_statistics(query_graph=graph, reference_graph=reference_graph)\n",
+    "        time_stats = {\"elapsed_time:\" + k: v for k, v in time_dict[i].items()}\n",
+    "        memory_stats = {\"peak_memory:\" + k: v for k, v in memory_dict[i].items()}\n",
+    "        \n",
+    "        stats = {\"config_id\": i, \"description\": config.description, \"n_neighbors\": k, \n",
+    "                 **graph_stats, **time_stats, **memory_stats}\n",
     "        df_rows.append(stats)\n",
     "df = pd.DataFrame(df_rows)\n",
     "df.to_csv(os.path.join(output_folder, \"overlap_statistics.tsv\"),  sep='\\t')\n",
